--- a/Rodriguezmae.html
+++ b/Rodriguezmae.html
@@ -13,7 +13,7 @@
 <link rel="stylesheet" href="stylesheet.css">
 <style>
 body {
-  font-family: sans-serif;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 .container {
   display: flex; 
@@ -31,7 +31,7 @@ body {
   margin-bottom: 20px;
 }
 .profile-picture img {
-  max-width: 100%; 
+  max-width: 100; 
   max-height: 100%;
 }
 </style>
@@ -43,22 +43,55 @@ body {
     <div class="profile-picture">
       <img src="689ed110-cd78-4077-871e-daad0904252f.jpg" alt="Profile Picture">
     </div>
+    <h4>Mae S. Rodriguez </h4>
     <h4>About Me </h4>
+    <p> </p>
     <h4>Contact</h4>
-    <p>Phone: 09811284865 </p>
+    <p>Phone: 09811284867</p>
     <p>Email: maerodriguez@gmail.com</p>
-    <p>Address: Upper lmac, Oroquieta City, Misamis Occidental </p>
+    <p>Address: Dalapang, Labangan, Zamboanga del sur
     <h4>Education</h4>
-    <p>Elementary: Dalapang, Labangan, Zamboanga del Sur </p>
-    <p>High School: </p>
-    <p>College: USTP </p>
-    <h4>Skills</h4>
+    <p>Elementary: Dalapang Elementary School
+    <p>High School: New Labangan National High School</p>
+    <p>College: University of Science and Technology of Southern Philliphines</p>
+   <h4>Skills</h4>
+   <p>- Organize</p>
+   <p>- Creative Writer</p>
+   <p>- Caregiving</p>
+   <p>- Time Management</p>
+    </h4>
     <h4>Work Experience</h4>
+    <p>-  Writer</p>
+    <p>-  Writer</p>
+    <p>-  Writer</p>
   </div>
+  <div class="container"></div>
   <div class="section">
     <div class="profile-picture">
-
-
+        <img src="OIP.jpg"Profile Picture">
+    </div>
+    <h4>Gellyn S. Rabino</h4>
+    <h4>About Me </h4>
+    <p> </p>
+    <h4>Contact</h4>
+    <p>Phone: 09639231903</p>
+    <p>Email: gellynrabino@gmail.com</p>
+    <p>Address: Upper Lamac Elementary School</p>
+    <h4>Education</h4>
+    <p>Elementary: Upper LamacZamboanga del sur</p>
+    <p>High School: Misamis Occidental National High School</p>
+    <p>College: University of Science and Technology of Southern Philliphines</p>
+   <h4>Skills</h4>
+   <p>- Coking</p>
+   <p>- Dancing</p>
+   <p>- Computer</p>
+   <p>- Time Management</p>
+    </h4>
+    <h4>Work Experience</h4>
+    <p>-  luh</p>
+    <p>-  Writer</p>
+    <p>-  Writer</p>
+  </div>
 </body>
 </html>
 
