--- a/Rodriguezmae.html
+++ b/Rodriguezmae.html
@@ -45,7 +45,7 @@ body {
     </div>
     <h4>Mae S. Rodriguez </h4>
     <h4>About Me </h4>
-    <p> </p>
+    <p>With the creative mind I possessed when it comes to writing fictions, I published a story in a reading app as part of my hobby. I also participated in our specialized subject in Senior High School which is Careviging.  </p>
     <h4>Contact</h4>
     <p>Phone: 09811284867</p>
     <p>Email: maerodriguez@gmail.com</p>
@@ -61,18 +61,18 @@ body {
    <p>- Time Management</p>
     </h4>
     <h4>Work Experience</h4>
-    <p>-  Writer</p>
-    <p>-  Writer</p>
-    <p>-  Writer</p>
+    <p>- Part time Call Center</p>
+    <p>- Digital Product Producer</p>
+    <p>- Massager </p>
   </div>
   <div class="container"></div>
   <div class="section">
     <div class="profile-picture">
-        <img src="OIP.jpg"Profile Picture">
+        <img src="OIP.jpg"Profile Picture>
     </div>
     <h4>Gellyn S. Rabino</h4>
     <h4>About Me </h4>
-    <p> </p>
+    <p>I graduated in Senior High School with NC II of my strand Home Economics. I partcipated in our OJT as an FBS or a waitress in a hotel, where the experience was remarkable and I learned a lot.</p>
     <h4>Contact</h4>
     <p>Phone: 09639231903</p>
     <p>Email: gellynrabino@gmail.com</p>
@@ -88,9 +88,9 @@ body {
    <p>- Time Management</p>
     </h4>
     <h4>Work Experience</h4>
-    <p>-  luh</p>
-    <p>-  Writer</p>
-    <p>-  Writer</p>
+    <p>- Cater</p>
+    <p>- Cookery NC II Holder</p>
+    <p>- FBS (Waitress)</p>
   </div>
 </body>
 </html>
