--- a/Rodriguezmae.html
+++ b/Rodriguezmae.html
@@ -45,7 +45,7 @@ body {
     </div>
     <h4>Mae S. Rodriguez </h4>
     <h4>About Me </h4>
-    <p>With the creative mind I possessed when it comes to writing fictions, I published a story in a reading app as part of my hobby. I also participated in our specialized subject in Senior High School which is Careviging.  </p>
+    <p>With the creative mind I possessed when it comes to writing fictions, I published a story in a reading app as part of my hobby. I also participated in our specialized subject in Senior High School which is careviging.  </p>
     <h4>Contact</h4>
     <p>Phone: 09811284867</p>
     <p>Email: maerodriguez@gmail.com</p>
