--- a/Rodriguezmae.html
+++ b/Rodriguezmae.html
@@ -55,15 +55,15 @@ body {
     <p>High School: New Labangan National High School</p>
     <p>College: University of Science and Technology of Southern Philliphines</p>
    <h4>Skills</h4>
-   <p>- Organize</p>
-   <p>- Creative Writer</p>
-   <p>- Caregiving</p>
-   <p>- Time Management</p>
+   <p> Organize</p>
+   <p> Creative Writer</p>
+   <p> Caregiving</p>
+   <p> Time Management</p>
     </h4>
     <h4>Work Experience</h4>
-    <p>- Part time Call Center</p>
-    <p>- Digital Product Producer</p>
-    <p>- Massager </p>
+    <p> Part time Call Center</p>
+    <p> Digital Product Producer</p>
+    <p> Massager </p>
   </div>
   <div class="container"></div>
   <div class="section">
@@ -76,21 +76,21 @@ body {
     <h4>Contact</h4>
     <p>Phone: 09639231903</p>
     <p>Email: gellynrabino@gmail.com</p>
-    <p>Address: Upper Lamac Elementary School</p>
+    <p>Address: Upper Lamac, Oroquieta City</p>
     <h4>Education</h4>
-    <p>Elementary: Upper LamacZamboanga del sur</p>
+    <p>Elementary: Upper Lamac Elementary School</p>
     <p>High School: Misamis Occidental National High School</p>
     <p>College: University of Science and Technology of Southern Philliphines</p>
    <h4>Skills</h4>
-   <p>- Coking</p>
-   <p>- Dancing</p>
-   <p>- Computer</p>
-   <p>- Time Management</p>
+   <p> Cooking</p>
+   <p> Dancing</p>
+   <p> Computer</p>
+   <p> Time Management</p>
     </h4>
     <h4>Work Experience</h4>
-    <p>- Cater</p>
-    <p>- Cookery NC II Holder</p>
-    <p>- FBS (Waitress)</p>
+    <p> Cater</p>
+    <p> Cookery NC II Holder</p>
+    <p> FBS (Waitress)</p>
   </div>
 </body>
 </html>
