--- a/Rodriguezmae.html
+++ b/Rodriguezmae.html
@@ -9,9 +9,24 @@
     <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" href="style.css">
 <title>Columnar Vitae</title >
-<link rel="stylesheet" href="stylesheet.css">
 <style>
+  body {
+    background: url('template.jpg') no-repeat center center fixed;
+    background-size: cover;
+    font-family: 'Arial', sans-serif;
+    margin: 0;
+    padding: 0;
+    color: #186e31; /* Optional text color */
+  }
+
+  .container {
+    background: rgba(255, 255, 255, 0.8);
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  }
 body {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
@@ -35,6 +50,7 @@ body {
   max-height: 100%;
 }
 </style>
+
 </head>
 <body>
 
@@ -96,4 +112,4 @@ body {
 </html>
 
 </body>
-</html>
+</html>`
